# ExileHub

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake.yml  cmake2.yml  format-build-test.yml
scripts/: analyze-all.sh  format-all.sh  pre-commit.sh  pre-push.sh  unit-tests.sh
src/: add_app_dialog.cpp  add_app_dialog.hpp  add_app_dialog.ui  api_handler.cpp  api_handler.hpp  app.cpp  app.hpp  app_card.cpp  app_card.hpp  app_card.ui  app_manager.cpp  app_manager.hpp  application.cpp  application.hpp  apps_view.cpp  apps_view.hpp  apps_view.ui  auto_updater.cpp  auto_updater.hpp  browser.cpp  browser.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  navigation_area.cpp  navigation_area.hpp  navigation_area.ui  options_dialog.cpp  options_dialog.hpp  options_dialog.ui  system_tray.cpp  system_tray.hpp  tray_icon.cpp  tray_icon.hpp
tests/: CMakeLists.txt  auto_update_test.cpp  test_auto_update.cpp  test_temp.cpp  tray_icon_test.cpp
